styled index page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 
          </div>
            
-                <h1 class="main-h1"> A new approach to <br>finding retinal disease treatment. 
+                <h1 class="main-h1"> <br>Find a retinal disease treatment. 
                     <a id="scroll-to-1"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
                 </h1> 
              
@@ -54,19 +54,20 @@
         <div class="page-whatis">
 
             <header class="how-it-header">
-                <h2 class="how-it-works-h2-top">How It Works
+                <h2 class="how-it-works-h2-top">How It Works</h2>
+
+               
+
+                <p class="lead index-page">Take a 5 minute assessment to see if you qualify for clinical trials. 
+               Then contact the clinics you qualified for.</p>
 
 
-                <p class="lead index-page">
- 
-
-                Take a 5 minute assessment to see if you qualify for clinical trials. Then contact the clinics you qualified for. 
-
-                </p> 
                 
-                <a class="btn btn-primary btn-lg" href="#" role="button" id="learn-more">Learn More About Us</a>
+                
+               
+                <a class="btn btn-primary btn-lg" href="#" role="button" id="learn-more-how">Learn More About Us</a>
 
-                </h2>
+                
            
             </header>
        
@@ -143,40 +144,65 @@
               <header class="block-avail-header">
                      
              </header> --}}
+             <div class="row">
                  <header class="avail-header">
-                        <h2 class="how-it-works-h2-top">Clinical Trials
+                        <h2 class="clinical-trials-h2-top">Clinical Trials </h2>
+                            <p class="lead index-p">
+                            
 
-                        <div class="row">
-                             <div class="col-md-6">
+                            With a free CesarCells account, you can search for Stem Cell, Drug, Bio-Tech, and Genetic clinical trials that you are intereted in.
+
+                            </p> 
+                        
+                             <div class="col-md-3">
                              <h2 class="avail-trials-h2">STEMCELL</h2>
-                             <img class="clin-trial-img" src="https://www.osc-ortho.com/wp-content/uploads/2016/02/stem-cells-icon.png">
+                             <img class="clin-trial-img" src="/assets/images/HumanCell.png">
                              </div>
-                             <div class="col-md-6">
+                             <div class="col-md-3">
                              <h2 class="avail-trials-h2">DRUG</h2>
-                             <img class="clin-trial-img" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/simple-red-square-icons-signs/129488-simple-red-square-icon-signs-prescription1.png">
+                             <img class="clin-trial-img" src="http://www.iconarchive.com/download/i82458/medicalwp/medical/Syringe-blue.ico">
                              </div>
-                             
-                        </div>
-                        <div class="row">
-                          
-                             <div class="col-md-6">
+                             <div class="col-md-3">
                              <h2 class="avail-trials-h2">BIO-TECH</h2>
-                             <img class="clin-trial-img" src="http://biotechprimer.com/wp-content/uploads/2014/10/Icon-Biotechnology.png">
+                             <img class="clin-trial-img" src="/assets/images/biochemistry.png">
                              </div>
-                             <div class="col-md-6">
+                             <div class="col-md-3">
                              <h2 class="avail-trials-h2">GENETIC</h2>
                              <img class="clin-trial-img" src="https://cdn2.iconfinder.com/data/icons/windows-8-metro-style/512/biotech.png">
                              </div>
-                        </div>
-                         {{!-- <p class="what-is-sci"><strong>Register to find a trial right for you. It's completely free!</strong></p> --}}
-                         {{!--   <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a> --}}
-           
-                        </h2>
                 </header>
             </div>
+         
+
+            
     </section>
+    <section id="cta" class="parallax-6">
+           
+               <div class="row">
+                   <header class="DNA-header">
+                        <h2 class="DNA-h2-top">Take a DNA Test </h2>                        
+                           <div class="col-md-6">
+                           <h2 class="avail-trials-h2">With a FREE CesarCells Account You Can:</h2>
+
+                            <ul class="list" style="text-align: left">
+                              <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Learn about your genetic susceptibility to certain retinal diseases</li><br>
+                              <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Know what your risk is for specific retinal diseases</li><br>
+
+                              <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Understand the SNPs that contribute to genetic retinal diseases</li>
+
+                            </ul>
+                           </div>
+                           <div class="col-md-6">
+                           <img src="/assets/images/23andMe_Box.jpg" style="margin-top: 50px">
+
+                           </div>                             
+                  </header>
+              </div>
+           
+
+              
+      </section>
     
-    <br><br><br>
     <div style="background-color: white; width: 100%; height: 10%; opacity: 1">
         <div style="text-align: center; opacity: 1; height: 10px">
         <h1 class="avail-trials-h1">Get Started Finding Your Treatment Now</h1>
