--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -26,8 +26,8 @@
                 <li><a href="/stargardts-clinical-trials">What to expect during a clinical trial?</a></li>
                 <li><a href="/stargardts-assistive-technologies">Assistive Technologies</a></li>
                 <li><a href="/stargardts-glossary">Glossary</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="/stargardts-stemcell-story">Inspiring story of Cesar</a></li>
+                {{!-- <li role="separator" class="divider"></li>
+                <li><a href="/stargardts-stemcell-story">Inspiring story of Cesar</a></li> --}}
               </ul>
             </li>
             <li class="dropdown">
