--- a/views/resources/clinical_trial_descr.handlebars
+++ b/views/resources/clinical_trial_descr.handlebars
@@ -3,7 +3,6 @@
         <h1 class="main-h1"> Clinical Trials 
         </h1> 
         
-        <h1 style="text-align: center; color: white"> Clinical Trial Phases </h1>
             
  
 </div>
@@ -11,7 +10,7 @@
   <div class="row">
     <div class="col-lg-12">
       <section class="intro-clinics" class="">
-        <header class="what-is-header">
+        <header class="clin-header">
           <h2 class="what-are-trials-h2">What are Clinical Trials?</h2>
         </header>
         <p class="lead starg">
@@ -23,7 +22,7 @@
   <div class="row">
     <div class="col-lg-12">
       <section class="intro-clinics" class="">
-        <header class="what-is-header">
+        <header class="clin-header">
           <h2 class="what-are-trials-h2">PHASE 1</h2>
         </header>
         <p class="lead starg">
@@ -36,7 +35,7 @@
   <div class="row">
     <div class="col-lg-12">
       <section class="intro-clinics" class="">
-        <header class="what-is-header">
+        <header class="clin-header">
           <h2 class="what-are-trials-h2">PHASE 2</h2>
         </header>
         <p class="lead starg">
@@ -49,7 +48,7 @@
   <div class="row">
     <div class="col-lg-12">
       <section class="intro-clinics" class="">
-        <header class="what-is-header">
+        <header class="clin-header">
           <h2 class="what-are-trials-h2">PHASE 3</h2>
         </header>
         <p class="lead starg">
@@ -62,7 +61,7 @@
   <div class="row">
     <div class="col-lg-12">
       <section class="intro-clinics" class="">
-        <header class="what-is-header">
+        <header class="clin-header">
           <h2 class="what-are-trials-h2">PHASE 4</h2>
         </header>
         <p class="lead starg">
