--- a/views/resources/whats_stargardts.handlebars
+++ b/views/resources/whats_stargardts.handlebars
@@ -18,7 +18,7 @@
   <div class="row">
     <div class="col-lg-9">
       <section class="intro-section">
-        <header class="what-is-header">
+        <header class="header">
           <h2 class="what-is-h2-stargardt">What is Stargardt Disease?</h2>
         </header>
           <p class="lead starg">
@@ -37,7 +37,7 @@
   <div class="row">
     <div class="col-lg-9">
       <section class="intro-section">
-        <header class="what-is-header">
+        <header class="header">
           <h2 class="what-is-h2-stargardt">What are the symptoms?</h2>
         </header>
         <p class="lead starg">
@@ -54,7 +54,7 @@
     <div class="row">
       <div class="col-lg-9">
           <section class="">
-            <header class="what-is-header">
+            <header class="header">
               <h2 class="what-is-h2-stargardt">How quickly does vision fade?</h2>
             </header>
               <p class="lead starg">
@@ -76,7 +76,7 @@
     <div class="row">
       <div class="col-lg-9">
           <section class="">
-            <header class="what-is-header">
+            <header class="header">
               <h2 class="what-is-h2-stargardt">Is it an inherited disease?</h2>
             </header>
               <p class="lead starg">
@@ -92,7 +92,7 @@
     <div class="row">
       <div class="col-lg-9">
           <section class="">
-            <header class="what-is-header">
+            <header class="header">
               <h2 class="what-is-h2-stargardt">What treatment is available?</h2>
             </header>
               <p class="lead starg">
@@ -106,7 +106,7 @@
     <div class="row">
       <div class="col-lg-9">
           <section class="">
-            <header class="what-is-header">
+            <header class="header">
               <h2 class="what-is-h2-stargardt">Are there any related diseases?</h2>
             </header>
               <p class="lead starg">
@@ -118,7 +118,7 @@
     <div class="row">
       <div class="col-lg-9">
           <section id="intro-stargardts-defined" class="">
-            <header class="what-is-header">
+            <header class="header">
               <h2 class="what-is-h2-stargardt">Stargardt Disease Defined</h2>
             </header>
               <p class="lead starg">
