--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -18,7 +18,7 @@
 
         <a href="/users/view-results">
 
-        <img src="http://cdn.theatlantic.com/assets/media/img/posts/2013/11/Screen_Shot_2013_11_25_at_3.55.49_PM/10d8d9a5c.png" class="img-rounded" alt="Cinque Terre" width="500" height="298" id="img-dash3"/>
+        <img src="/assets/images/color.jpeg" class="img-rounded" alt="Cinque Terre" width="500" height="298" id="img-dash3"/>
         <h3><span>YOUR RESULTS</span></h3>
         </a>
         </div>
@@ -28,7 +28,7 @@
             </div>
             {{#unless assessmentTaken}}
             <a href="/tools/start-health-assessment">
-            <img src="https://s.graphiq.com/sites/default/files/2307/media/images/Twitter_Blue_1409382.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash"/>
+            <img src="/assets/images/color1.jpeg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash"/>
             <h3><span>Take The Clinical Trial <br>Assessment</span></h3>
             </a>
             {{/unless}}
@@ -36,13 +36,13 @@
             {{#if assessmentTaken}}
 
             <a href="#">
-            <img src="https://s.graphiq.com/sites/default/files/2307/media/images/Twitter_Blue_1409382.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash" style="-webkit-filter: grayscale(100%); filter: grayscale(100%)" />
+            <img src="/assets/images/color1.jpeg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash" style="-webkit-filter: grayscale(100%); filter: grayscale(100%)" />
             <h3><span>Take The Clinical Trial <br>Assessment</span></h3>
             </a>
             {{/if}}
 
             <a href="/tools/my-genetics">
-            <img src="https://vacandlesupply.com/product-images/Blue%20Soap%20Dye.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash2">
+            <img src="/assets/images/color1.jpeg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash2">
             <h3 id="top-right-h3"><spanid="top-right-span">My Genetics</span></h3>
             </a>
         </div>
@@ -54,12 +54,12 @@
         <div class="col-md-6" id="col-two-dash-images"> 
             <a href="/tools/amsler-test">
 
-            <img src="http://www.beautycolorcode.com/66b7e1-336x280.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash3"/>
+            <img src="/assets/images/color1.jpeg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash3"/>
             <h3><span>Take the Amsler Test</span></h3>
             </a>
 
             <a href="/tools/all-trials">
-            <img src="https://images-na.ssl-images-amazon.com/images/I/31K9TPCCM8L.jpg" class="img-rounded hvr-wobble-vertical" alt="Cinque Terre" width="304" height="206" id="img-dash4"/>
+            <img src="/assets/images/color1.jpeg" class="img-rounded hvr-wobble-vertical" alt="Cinque Terre" width="304" height="206" id="img-dash4"/>
             <h3 id="top-right-h3"><spanid="top-right-span">Search For Trials</span></h3>
             </a>
         </div>
