--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,12 +28,13 @@ h3 {
     line-height: 15.4px;
 }
 #bs-example-navbar-collapse-1 {
-    position: relative;
-    top: 1.333333em;
+    /*position: relative;
+    top: 0.333333em;*/
 }
 .parallax {
     /* The image used */
-    background-image: url("http://wallpapercave.com/wp/wZR4Saq.jpg");
+    /*background-image: url("http://wallpapercave.com/wp/wZR4Saq.jpg");*/
+    background-image: url("/assets/images/color6.jpeg");
 
     /* Set a specific height */
     height: 100%;
@@ -46,9 +47,10 @@ h3 {
 }
 .parallax-2 {
     /* The image used */
-    background-image: url("https://static.pexels.com/photos/30763/pexels-photo-30763-large.jpg");
+    /*background-image: url("https://static.pexels.com/photos/30763/pexels-photo-30763-large.jpg");*/
+    background-image: url("/assets/images/color6.jpeg");
 
-    /* Set a specific height */
+    /* Set a specific height 
     height: 100%;
 
     /* Create the parallax scrolling effect */
@@ -59,7 +61,8 @@ h3 {
 }
 .parallax-3 {
     /* The image used */
-    background-image: url("http://www.stemcentrx.com/img/home_science.png");
+    /*background-image: url("http://www.stemcentrx.com/img/home_science.png");*/
+    background-image: url("/assets/images/color6.jpeg");
 
     /* Set a specific height */
     height: 100%;
@@ -73,7 +76,8 @@ h3 {
 .parallax-4 {
     /* The image used */ 
 
-    background-image: url("http://feelgrafix.com/data_images/out/28/1008780-doctor.jpg");
+    /*background-image: url("http://feelgrafix.com/data_images/out/28/1008780-doctor.jpg");*/
+    background-image: url("/assets/images/color6.jpeg");
 
     /* Set a specific height */
     height: 100%;
@@ -87,7 +91,22 @@ h3 {
 .parallax-5 {
     /* The image used */ 
 
-    background-image: url("https://static.pexels.com/photos/47446/pexels-photo-47446-large.jpeg");
+    /*background-image: url("https://static.pexels.com/photos/47446/pexels-photo-47446-large.jpeg");*/
+    background-image: url("/assets/images/office.jpg");
+
+    /* Set a specific height */
+    height: 90%;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax-6 {
+    /* The image used */ 
+
+    /*background-image: url("http://feelgrafix.com/data_images/out/28/1008780-doctor.jpg");*/
+    background-image: url("/assets/images/color6.jpeg");
 
     /* Set a specific height */
     height: 100%;
@@ -99,8 +118,9 @@ h3 {
     background-size: cover;
 }
 .clin-trial-img {
-    width: 150px;
+    width: 250px;
     height: 150px;
+    opacity: .7;
 }
 /*http://www.stemcentrx.com/img/home_science.png*/
 /*http://www.stemcentrx.com/img/clinical-bg.png*/
@@ -358,41 +378,41 @@ pre {
 }
 .jumbotron-glossary {
 
-    background-image: url("http://www.stemcentrx.com/img/header_our_science.png");
+    background-image: url("/assets/images/color.jpeg");
     background-size: cover;
-    height: 90%;
+    height: 60%;
 }
 .jumbotron-my-genetics {
 
-    background-image: url("http://www.stemcentrx.com/img/header_our_science.png");
+    background-image: url("/assets/images/color.jpeg");
     background-size: cover;
     height: 30%;
 
 }
 .jumbotron-assist-tech {
 
-    background-image: url("http://www.stemcentrx.com/img/clinical-bg.png");
+    background-image: url("/assets/images/color.jpeg");
     background-size: cover;
-    height: 90%;
+    height: 60%;
 }
 .jumbotron-whatis {
 
-    background-image: url("https://static.pexels.com/photos/47446/pexels-photo-47446-large.jpeg");
+    background-image: url("/assets/images/color.jpeg");
     background-size: cover;
-    height: 90%;
+    height: 60%;
 }
 .jumbotron-clinical-trial {
-    background-image: url('https://static.pexels.com/photos/4154/clinic-doctor-health-hospital-large.jpg');
+    background-image: url('/assets/images/color.jpeg');
     background-size: cover;
-    height: 90%;
+    height: 60%;
 }  
 .jumbotron-gene-data {
-    background-image: url('https://static.pexels.com/photos/4154/clinic-doctor-health-hospital-large.jpg');
+    background-image: url('/assets/images/color.jpeg');
     background-size: cover;
     height: 45%;
 }  
 .jumbotron-aboutus {
-    background-image: url('http://www.stemcentrx.com/img/hdr_company.jpg');
+    background-image: url('/assets/images/color1.jpeg');
     background-size: cover;
     height: 90%;
 }
@@ -429,7 +449,7 @@ pre {
     font-weight: bold;
     position: relative;
     display: block;
-    top: 50%;
+    top: 32%;
     opacity: 0;
      
 }
@@ -500,6 +520,7 @@ pre {
     padding: 15px;
     margin: 10px;
 
+
 }
 
 .browse-trials-h2 {
@@ -543,9 +564,23 @@ pre {
 
 }
 .index-page {
-    margin-top: 60px;
+    margin-top: 80px;
+    line-height: 2;
     font-size: 26px;
-    font-weight: 600;
+    font-weight: 300;
+    padding-left: 300px;
+    padding-right: 300px;
+    /*text-align: left;*/
+
+}
+.index-p {
+    margin-top: 80px;
+    line-height: 2;
+    font-size: 26px;
+    font-weight: 300;
+    padding-left: 300px;
+    padding-right: 300px;
+    /*text-align: left;*/
 
 }
 .what-is-h2-stargardt {
@@ -566,10 +601,26 @@ margin-bottom: 69px;
     font-size: 70px;
     font-weight: 600;
     color: darkslategray;
-    top: 20%;
+    top: 10%;
     display: block;
     position: relative;
     opacity: 0;
+}
+.clinical-trials-h2-top {
+
+    font-size: 70px;
+    font-weight: 600;
+    color: darkslategray;
+    top: 20%;
+  
+}
+.DNA-h2-top {
+
+    font-size: 70px;
+    font-weight: 600;
+    color: darkslategray;
+    top: 20%;
+  
 }
 .tools-h2 {
 
@@ -577,13 +628,14 @@ font-size: 50px;
 font-weight: 300;
 color: white;
 /*border-radius: 50%; */
-/*margin-top: 100px;*/
+/*margin-top: 150px;*/
 /*background-color: white;*/
-background: rgba(255, 255, 255, 0.9);
+/*background: rgba(255, 255, 255, 0.9);*/
+background: url('/assets/images/background4.jpeg');
 opacity: 1.3;
 z-index: 7;
 /*position: fixed;*/
-width: 50%;
+/*width: 50%;*/
 height: 100%;
 /*margin: 0;*/
 box-sizing: border-box;
@@ -591,6 +643,7 @@ float: left;
 z-index: 100;
 color: #433F4E;
 text-align: center;
+
 }
 .page-trials {
     /*width: 50%;*/
@@ -602,7 +655,7 @@ text-align: center;
     height: 100%;
 }
 .page-whatis {
-    width: 50%;
+    /*width: 50%;*/
     height: 100%;
 }
 .space-taker {
@@ -712,18 +765,16 @@ text-align: center;
     margin-bottom: 10%;
 }
 .avail-trials-h2 {
-    font-size: 32px;
-    margin-top: 50px;
-}
-.avail-trials-h2:hover {
     font-size: 38px;
+    margin-top: 50px;
     color: deeppink;
-    transition: 1s ease-out;
-    cursor: pointer;
+
 }
+
 .avail-trials-h1 {
     font-size: 50px;
     padding-bottom: 20px;
+    padding-top: 30px;
 }
 
 .what-is-header {
@@ -731,8 +782,9 @@ text-align: center;
     /*margin-bottom: 10px;*/
     /*margin-top: 100px;*/
     /*background-color: whitesmoke;*/
-    background: rgba(255, 255, 255, 0.9);
-    opacity: 1.3;
+    /*background: rgba(255, 255, 255, 0.9);*/
+    background: url('/assets/images/background5.jpeg');
+    opacity: 1.2;
     z-index: 7;
     /*border-radius: 50%; */
     /*position: fixed;*/
@@ -748,11 +800,26 @@ text-align: center;
 
 .avail-header {
     
-    background: rgba(255, 255, 255, 0.9);
+    /*background: rgba(255, 255, 255, 255);*/
+    background-color: whitesmoke;
     opacity: 1.3;
     z-index: 7;
-    width: 50%;
-    height: 100%;
+    /*background: url('/assets/images/background3.jpeg');*/
+    /*width: 50%;*/
+    height: 700px;
+    box-sizing: border-box;
+    z-index: 100;
+    color: #433F4E;
+    text-align: center;
+}
+.DNA-header {
+    
+    background: rgba(255, 255, 255, 255);
+    opacity: 1.3;
+    z-index: 7;
+    /*background: url('/assets/images/background1.jpeg');*/
+    /*width: 50%;*/
+    height: 800px;
     box-sizing: border-box;
     z-index: 100;
     color: #433F4E;
@@ -760,15 +827,18 @@ text-align: center;
 }
 .how-it-header {
     
-    background: rgba(255, 255, 255, 0.9);
+    /*background: rgba(255, 255, 255, 0.9);*/
+    /*background: rgba(255, 255, 255, 255);*/
+
     opacity: 1.3;
     z-index: 7;
     width: 100%;
-    height: 100%;
+    height: 700px;
     box-sizing: border-box;
     z-index: 100;
     color: #433F4E;
     text-align: center;
+    position: relative;
 }
 .trials-header {
 
@@ -1096,6 +1166,22 @@ text-align: center;
     border-width: 5px;
     border-style: solid;
 }
+#learn-more-how {
+    background-color:  transparent;
+    color: white;
+    transition: 1s ease-out;
+    border-color: white;
+    border-width: 5px;
+    border-style: solid;
+}
+#learn-more-how:hover {
+    background-color:  white;
+    color: deeppink;
+    transition: 1s ease-out;
+    border-color: deeppink;
+    border-width: 5px;
+    border-style: solid;
+}
 .new-window {
     height: 130px;
     width: 130px;
@@ -1130,7 +1216,7 @@ text-align: center;
 .glyphicon-chevron-down {
     /*height: 140px;*/
     /*width: 60px;*/
-    color: deeppink;
+    /*color: deeppink;*/
     
 }
 
@@ -1308,11 +1394,7 @@ text-align: center;
     margin-left: 10px;
     background-color: whitesmoke;
 }
-#img-dash3:hover {
-    margin-left: 35px;
-    background-color: whitesmoke;
-    opacity: .2;
-}
+
 #img-dash4 {
     margin-left: 10px;
 }
@@ -1330,6 +1412,21 @@ text-align: center;
     position: relative;
 
 }
+.dropdown-menu{
+    color: deeppink;
+    
+
+}
+.dropdown-menu:hover{
+    color: deeppink;
+
+}
+.dropdown-menu, a:hover{
+    color: deeppink;
+    background-color: white;
+
+}
+
 h3 {
     position: absolute;
     /*left: 0;*/
@@ -1605,9 +1702,9 @@ div.container-fluid.bg-info {
     background-color: transparent;
 }
 nav.navbar.navbar-default.navbar-fixed-top {
-    background-color: white;
+    /*background-color: white;
     border-color: transparent;
-    height: 6.9375em;
+    height: 4.9375em;*/
     
 }
 #contact-support-form {
@@ -1711,7 +1808,7 @@ img.question-image {
 }
 .panel-footer {
   height: 400px;
-  background-color: white;
+  background-color: #2a272e;
   margin-top:  0px;
  }
 #start-panel-head {
